added p to about section

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
     <div class="flex-container">
       {{>header}}
       <main>
+        <p>This site was created by Hideaki Aomori. It uses data from mapbox.com and darksky.net</p>
         <image class="portrait" src = '/img/profile.JPG'></image>
       </main>
     </div>
